<resources>

    <string name="app_name">苏州学堂</string>
    <!-- <string name="app_name">点通学堂</string> -->
    <string name="home">首页</string>
    <string name="inclass">课内</string>
    <string name="outclass">课外</string>
    <string name="mine">我</string>
    <string name="programLoading">程序加载中…</string>
    <string name="app_name_chs">名师课堂</string>
    <string name="dtTitle">选择点通，成就未来</string>
    <string name="username">账户</string>
    <string name="password">密码</string>
    <string name="commentPrompt">说点儿什么吧……</string>
    <string name="titleImg">刷新</string>
    <string name="syncClassRoom">同步课堂</string>
    <string name="homework">我的作业</string>
    <string name="homeworkDetail">作业详情</string>
    <string name="selfTest">自测评估</string>
    <string name="album">班级相册</string>
    <string name="favorite">我的收藏</string>
    <string name="messageBox">消息</string>
    <string name="message">我的消息</string>
    <string name="growfile">成长档案</string>
    <string name="my">我</string>
    <string name="more">更多</string>
    <string name="contact">联系人</string>
    <string name="spoor">成长足迹</string>
    <string name="subjectMore">more</string>
    <string name="video">视频</string>
    <string name="exercise">同步练习</string>
    <string name="tongji">成绩统计图</string>
    <string name="playVideo">用外部播放器播放</string>
    <string name="imgsubject">学科图片</string>
    <string name="loading">数据加载中…</string>
    <string name="reading">数据加载中…</string>
    <string name="index">序号</string>
    <string name="examName">试卷名称</string>
    <string name="go">&gt;</string>
    <string name="shu">99</string>
    <string name="confirm">确  定</string>
    <string name="submit">提 交</string>
    <string name="right">回答正确</string>
    <string name="analysis">解析</string>
    <string name="delete">删除</string>
    <string name="redo">重做</string>
    <string name="confrimPic">图片</string>
    <string name="unfinished">未完成</string>
    <string name="score">得分:</string>
    <string name="undone">未完成</string>
    <string name="rightAnswer">正确答案</string>
    <string name="myAnswer">我的答案</string>
    <string name="splitline">分割线</string>
    <string name="testTime">测试时间</string>
    <string name="open">打开</string>
    <string name="cancledown">取消下载</string>
    <string name="explain">解析</string>
    <string name="myscoreselect">成绩查询</string>
    <string name="myTestrecord">做题记录</string>
    <string name="myjiangchengrecord">奖惩记录</string>
    <string name="mySchoolactivity">学校活动</string>
    <string name="myCollect">我的收藏</string>
    <string name="mymessage">个人信息</string>
    <string name="changeuser">切换用户</string>
    <string name="help">帮助</string>
    <string name="tobevip">成为vip</string>
    <string name="version">版本说明</string>
    <string name="feedback">意见反馈</string>
    <string name="feedbackTitle">意见标题</string>
    <string name="feedbackContent">意见内容</string>
    <string name="titleHint">20个字符以内</string>
    <string name="contentHint">500个字符以内</string>
    <string name="out">退出</string>
    <string name="name">姓名：</string>
    <string name="schoolname">学校：</string>
    <string name="gradename">年级：</string>
    <string name="classname">班级：</string>
    <string name="hardCollect">难题收藏</string>
    <string name="del">删除</string>
    <string name="commentText">留言</string>
    <string name="submitComment">发送</string>
    <string name="cancleComment">取消</string>
    <string name="empty"></string>
    <string name="pullToRefresh">下拉刷新</string>
    <string name="lastRefresh">上次更新新</string>
    <string name="notice_id">notice_id</string>
    <string name="messagebox">消息盒子</string>
    <string name="msgNotice">消息提醒</string>

    <string name="addRelevancyUser">添加关联用户</string>
    <string name="student_name">学生姓名</string>
    <string name="user_name">用户名</string>
    <string name="user_password">密码</string>
    <string name="verify_add">确认添加</string>
    <string name="change_phone">更改手机号码</string>
    <string name="phone">系统中手机号码:13600000000</string>
    <string name="input_new_phone">请输入新的手机号</string>
    <string name="hint">提示</string>
    <string name="confim_phone">确认将手机号码修改为:\n\t\t136000000000?</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="enter">进入</string>
    <string name="exam_image_select">选择照片</string>
    <string name="exam_audio_select">选择音频</string>
    <string name="exam_video_select">选择视频</string>
    <string name="video_duration_default_format">00:00:00</string>
    <string name="not_support_camera">Camera service not available</string>
    <string name="stop_err">Can not get recorded video, please try again</string>
    <string name="string_yes_dialog">Yes</string>
    <string name="string_no_dialog">No</string>
    <string name="string_cancel">Cancel</string>
    <string name="recording_cancel_warning">This will discard your video, do you really want to do?</string>
    <string name="stop_recording_video_err">Prolem when saving video data, please try again</string>
    <string name="x_mbs">%1$sMB</string>
    <string name="x_kbs">%1$sKB</string>
    <string name="video_upload">上传视频</string>
    <string name="video_confirm">使用视频</string>
    <string name="video_cancle">取消</string>
    <string name="video_retry">重拍</string>
    <string name="exam_image_max_count">最多只能选择%1$d张图片</string>
    <string name="exam_image_preview">预览</string>
    <string name="exam_image_upload">上传照片(%1$d)</string>
    <string name="exam_image_upload_n">上传照片</string>
</resources>