<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_border"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/hint"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtConfirmPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/confim_phone"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/btnNo"
            android:layout_width="106dp"
            android:layout_height="36dp"
            android:background="@drawable/bg_border"
            android:text="@string/no" />

        <Button
            android:id="@+id/btnYes"
            android:layout_width="106dp"
            android:layout_height="36dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bg_border"
            android:text="@string/yes" />
    </LinearLayout>
</LinearLayout>