<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include layout="@layout/view_topbar_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center">

        <TextView
            android:id="@+id/txtOldPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round"
            android:gravity="center"
            android:text="@string/phone"
            android:textColor="@color/select_black"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/input_phone"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_round"
            android:gravity="center"
            android:hint="@string/input_new_phone"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:padding="3dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnConfim"
        android:layout_width="90dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_border22"
        android:text="@string/confirm" />
</LinearLayout>